[package]
name = "site_icons"
version = "0.4.0"
authors = ["Sam Denty <sam@samdenty.com>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://github.com/samdenty/site_icons"
repository = "https://github.com/samdenty/site_icons"
documentation = "https://docs.rs/site_icons"
description = "Website icon scraper that fetches sizes (with WASM support)"
keywords = ["favicon", "logo", "website", "scraper", "cli"]
categories = ["command-line-utilities", "multimedia::images", "wasm"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "3.1.7", features = ["derive"] }
vec1 = { version = "1.6.0", features = ["serde"] }
itertools = "0.10.0"
serde_with = "1.6.2"
html5ever = "0.26.0"
percent-encoding = "2.1.0"
url = { version = "2.2.0", features = ["serde"] }
regex = "1"
log = "0.4.14"
once_cell = "1.5.2"
scraper = "0.13.0"
byteorder = "1.4.2"
data-url = "0.1.0"
mime = { package = "mime_4", version = "0.4.0-a.0" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures = "0.3.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { package = "reqwest-wasm", version = "0.11.15", features = [
  "json",
  "cookies",
  "blocking",
  "stream",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.1.1", features = ["full"] }
env_logger = "0.9.0"
reqwest = { version = "0.11.12", features = [
  "json",
  "cookies",
  "blocking",
  "stream",
] }
