[package]
name = "site_icons"
version = "0.6.0"
authors = ["Sam Denty <sam@samdenty.com>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://github.com/samdenty/site_icons"
repository = "https://github.com/samdenty/site_icons"
documentation = "https://docs.rs/site_icons"
description = "Website icon scraper that fetches sizes (with WASM support)"
keywords = ["favicon", "logo", "website", "scraper", "cli"]
categories = ["command-line-utilities", "multimedia::images", "wasm"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vec1 = { version = "1.10.1", features = ["serde"] }
flo_stream = "0.7"
itertools = "0.10.5"
serde_with = "2.1.0"
html5ever = "0.26.0"
percent-encoding = "2.2.0"
url = { version = "2.3.1", features = ["serde"] }
regex = "1"
log = "0.4.17"
once_cell = "1.16.0"
scraper = "0.13.0"
byteorder = "1.4.3"
data-url = "0.2.0"
mime = { package = "mime_4", version = "0.4.0-a.0" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures = "0.3.25"
tldextract = "0.6.0"
lol_html = "0.3.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { package = "reqwest-wasm", version = "0.11.16", features = [
  "json",
  "cookies",
  "blocking",
  "stream",
] }
cached = { version = "0.41.0", default_features = false, features = [
  "proc_macro",
  "wasm",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "3.2.23", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
env_logger = "0.9.3"
cached = "0.41.0"
reqwest = { version = "0.11.13", features = [
  "json",
  "cookies",
  "blocking",
  "stream",
] }
