[package]
name = "site_icons"
version = "0.6.4"
authors = ["Sam Denty <sam@samdenty.com>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://github.com/samdenty/site_icons"
repository = "https://github.com/samdenty/site_icons"
documentation = "https://docs.rs/site_icons"
description = "Website icon scraper that fetches sizes (with WASM support)"
keywords = ["favicon", "logo", "website", "scraper", "cli"]
categories = ["command-line-utilities", "multimedia::images", "wasm"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.4.3"
data-url = "0.3.0"
flo_stream = "0.7"
futures = "0.3.28"
html5ever = "0.26.0"
itertools = "0.11.0"
log = "0.4.20"
lol_html = "0.4.0" # TODO: Update to v1.2.x
mime = { package = "mime_4", version = "0.4.0-a.0" }
once_cell = "1.18.0"
percent-encoding = "2.3.0"
regex = "1"
scraper = "0.17.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = "3.3.0"
tldextract = "0.6.0"
url = { version = "2.4.1", features = ["serde"] }
vec1 = { version = "1.10.1", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.reqwest]
package = "reqwest-wasm"
version = "0.11.16"
features = ["json", "cookies", "blocking", "stream"]

[target.'cfg(target_arch = "wasm32")'.dependencies.cached]
version = "0.44.0" # TODO: update to v0.45.x
default_features = false
features = ["proc_macro", "wasm"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cached = "0.44.0" # TODO: update to v0.45.x
clap = { version = "4.4.3", features = ["derive"] }
env_logger = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.reqwest]
version = "0.11.20"
features = ["json", "cookies", "blocking", "stream"]
